# NSCA

./: .gitignore  CMakeLists.txt  README.md  cpp.hint
Archived/Demo_build/: Notes.md
Archived/v0.1_SourceFiles/CodeBase/: Root_Cmake_file.md
Archived/v0.1_SourceFiles/CodeBase/DX11_Library/: CmakeLists.txt
Archived/v0.1_SourceFiles/CodeBase/DX11_Library/Src/: DX11Main.cpp
Archived/v0.1_SourceFiles/CodeBase/DX11_Library/Src/Internal/: DX11Platform.h
Archived/v0.2.1-Source/: CMakeLists_txt.md
Archived/v0.2.1-Source/CodeBase/App/: CmakeLists.txt
Archived/v0.2.1-Source/CodeBase/NSCA_Library/Src/: NSCA.cpp
Archived/v0.2.1-Source/CodeBase/NSCA_Library/Src/Internal/: NSCA_Platform.h
Archives/0.3.3.910/CodeBase/: CMakeLists.txt
Archives/0.3.3.910/CodeBase/App/: CmakeLists.txt
Archives/0.3.3.910/CodeBase/App/Include/: C_CPP_test.h
Archives/0.3.3.910/CodeBase/App/Src/: C_CPP_test.cpp  conSys_Version.cpp
Archives/0.3.3.910/CodeBase/NSCA_Library/Internal/: NSCA_Platform.h
Archives/0.3.3.910/CodeBase/NSCA_Library/Src/: NSCA.cpp
Archives/NSCA-0.2.1/App/Include/: Global_Header.h
Archives/NSCA-0.2.1/include/NSCA/: NSCA.h
CodeBase/: CMakeLists.txt
CodeBase/App/: CmakeLists.txt
CodeBase/App/Internal/: Foo.h
CodeBase/App/Src/: C_CPP_test.cpp  Source.cpp  conSys_Version.cpp
CodeBase/Fundamentals/: CmakeLists.txt
CodeBase/Fundamentals/Include/: Global_Header.h
CodeBase/Fundamentals/Src/: AppEntry.cpp  Source.cpp
CodeBase/NSCA_Library/: CmakeLists.txt
CodeBase/NSCA_Library/Include/: NSCA++.h  NSCA.h
CodeBase/NSCA_Library/Internal/: NSCA_Platform.h
CodeBase/NSCA_Library/Src/: NSCA.cpp
Library_builds/: IMPORTANT.md
Library_builds/DX11-Version-0-1/: IMPORTANT.md
Library_builds/DX11-Version-0-1/Include/: DX11Main.h
Library_builds/NSCA-0.2.1/cmake/: NSCAConfig.cmake  NSCATargets-release.cmake  NSCATargets.cmake
Markdown/: Application_&_Library_Overview.md
cmake/: App_Builder.cmake  Config.cmake.in  DX11Utils.cmake  DX11UtilsConfig.cmake  NSCAConfig.cmake  build_applications.cmake  build_library.cmake  build_prog.cmake  build_tool.cmake  lib_build_Script.cmake
